--- a/.github/workflows/compile_sketch.yml
+++ b/.github/workflows/compile_sketch.yml
@@ -16,8 +16,6 @@ jobs:
 
       - name: Setup arduino cli
         uses: arduino/setup-arduino-cli@v2.0.0
-        with:
-          version: "1.1.0"
 
       - name: Install repo as library
         run: |
@@ -30,4 +28,4 @@ jobs:
           arduino-cli core install arduino:avr@1.8.2
 
       - name: Build sketch
-        run: arduino-cli compile --fqbn arduino:avr:uno --libraries /home/runner/work/Grove_Temper_Humidity/Grove_Temper_Humidity ./examples/TH02_demo/ --warnings more
+        run: arduino-cli compile --fqbn arduino:avr:uno ./examples/TH02_demo/ --warnings more
