--- a/.github/workflows/compile_sketch.yml
+++ b/.github/workflows/compile_sketch.yml
@@ -23,5 +23,11 @@ jobs:
       - name: Setup arduino cli
         uses: arduino/setup-arduino-cli@v2.0.0
 
+      - name: Create a ignore.list file
+        run: |
+          echo "TH02_demo,Seeeduino:nrf52:XIAONRF52840 esp32:ESP32:XIAO_ESP32C3" >> ignore.list
+          echo "TH06_demo,Seeeduino:nrf52:XIAOnRF52840" >> ignore.list
+          echo "TH06_demo,esp32:esp32:XIAO_esp32C3" >> ignore.list
+
       - name: Build sketch
-        run: ./tools/compile.sh
+        run: ./ci/tools/compile.sh
