--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -37,7 +37,7 @@ jobs:
         run: cat build.log
 
       - name: Generate issue
-        if: ${{ env.GITHUB_EVENT_NAME != 'pull_request' }}
+        if: ${{ github.event_name != 'pull_request' }}
         run: ./ci/tools/issue.sh
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
